--- a/kubernetes/apps/monitoring/dozzle/app/rbac.yaml
+++ b/kubernetes/apps/monitoring/dozzle/app/rbac.yaml
@@ -23,7 +23,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: pod-viewer
-    namespace: monitoring
+    namespace: default
 roleRef:
   kind: ClusterRole
   name: pod-viewer-role
