--- a/kubernetes/apps/monitoring/dozzle/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/dozzle/app/helmrelease.yaml
@@ -22,6 +22,7 @@ spec:
     remediation:
       strategy: rollback
       retries: 3
+  serviceAccountName: pod-viewer
   values:
     controllers:
       dozzle:
