update rbac & values

--- a/kubernetes/apps/system-upgrade/system-upgrade-controller/plans/talos.yaml
+++ b/kubernetes/apps/system-upgrade/system-upgrade-controller/plans/talos.yaml
@@ -9,9 +9,9 @@ spec:
   concurrency: 1
   postCompleteDelay: 2m
   exclusive: true
-  serviceAccountName: system-upgrade
+  serviceAccountName: system-upgrade-controller
   secrets:
-    - name: system-upgrade
+    - name: system-upgrade-controller
       path: /var/run/secrets/talos.dev
       ignoreUpdates: true
   nodeSelector:
