--- a/kubernetes/apps/default/smtp-relay/app/secret.sops.yaml
+++ b/kubernetes/apps/default/smtp-relay/app/secret.sops.yaml
@@ -8,7 +8,7 @@ stringData:
     SMTP_HOSTNAME: ENC[AES256_GCM,data:nJZewPrjJpfBxQ==,iv:APQHheUyat5NXMiZQYiWisYm05VZynyAVK9iX9FtAO8=,tag:i7Q1JashbjrKz/72GEaW4g==,type:str]
     SMTP_SERVER: ENC[AES256_GCM,data:1hmItdYUSL1LmRaHcz3SCQ==,iv:9Ym6yBFTo3eYnjMBC2LVLFnl0PSLzrJP6XxCXcAmP6g=,tag:ngTHBmS7poMuNzzHTOvc2g==,type:str]
     SMTP_USERNAME: ENC[AES256_GCM,data:PNnWeHfJ8/3qqaHPRQU9WiA5P/SYozfMeA==,iv:389DaO6vRBVe+itMsDQHiztgIb4HxGMkj8584ldCKPQ=,tag:kK/p4mVSs4S97E5PZzgfVQ==,type:str]
-    SMTP_PASSWORD: ENC[AES256_GCM,data:C+JkystFWgbTT6qXFrcP,iv:uVYGwtAIR2DcDQXEWTuOxyY77MYO80QYynWSwzY5rIE=,tag:nil12dOeaaUqNczmeZI6CA==,type:str]
+    SMTP_PASSWORD: ENC[AES256_GCM,data:ertJ2ZUrjFmgZ78oRomwN39GwLEoaqsy/K6V/RvZI4gxxHTTxnHXlQ==,iv:rBgMiu1Xh2VqERfCXmbWuq6jA3RtHhQLDl92OjQ+q0o=,tag:9YrthbSV+8iWOa9/LToPBQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -24,8 +24,8 @@ sops:
             TjZZK3RONXZEMlV4c3JLajV4dm9oWjQK4Q8UcrDeZD1Z25lyFNHOaZyI76vBL+Jw
             /zCrWNNRQ5Pc+OVvKbB8ZUjR8A2mWXoX+smrDsDqfpMCCxiZ14yv9w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-25T15:05:37Z"
-    mac: ENC[AES256_GCM,data:EoNiwTUrMBNGz+0IBZjMonNh4JC0pwlYsA9koKgDH8Tuxj3jEXLeg81KNNevFPrfnE5kOiE3urLECZjVuuJnGYWEIv2WZZOGuYBAli9hYhpxPa8t63mQrm7baNlJc+FJbpEZs2cVv/je3xAeobfYt/2k/bm0w8uFhcpjAfzk944=,iv:REO8KPhtpq6dziVI4T+KGP5sTZPDeV/S/xPDQawbBbo=,tag:Eu5en7YYdwEjOoo6uas+YA==,type:str]
+    lastmodified: "2025-03-06T18:56:00Z"
+    mac: ENC[AES256_GCM,data:Ms3oSlgy0Q+eZsgs7AhgNpnojpPtyA/1zVwhhU6Uth6Y3SrpLE8cZLvn2E0iRlLtdsL2jLA6QQEvus8hkgwJv96/sta8fNXy+GqVG8VcEq9gmFnAsfdEDNyHAlgCNj6xkBxAfxT0TELMvmT+ZbCPy+Cgglh5e25xcyH/YHUrVqc=,iv:DoPSx+WY9Z+p+QrxdM7nsP4zMS1VsC6KATrCGjndF5M=,tag:pPfgYrC3hqwF05l+jcB2Lw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.7.3
+    version: 3.9.4
