--- a/.github/labeler.yaml
+++ b/.github/labeler.yaml
@@ -1,9 +1,10 @@
 ---
-# Areas
+area/bootstrap:
+  - changed-files:
+      - any-glob-to-any-file: "bootstrap/**/*"
 area/docs:
   - changed-files:
       - any-glob-to-any-file:
-          - "docs/**/*"
           - "README.md"
 area/github:
   - changed-files:
@@ -11,12 +12,19 @@ area/github:
 area/kubernetes:
   - changed-files:
       - any-glob-to-any-file: "kubernetes/**/*"
+area/renovate:
+  - changed-files:
+      - any-glob-to-any-file:
+          - ".renovate/**/*"
+          - ".renovaterc.json5"
+area/scripts:
+  - changed-files:
+      - any-glob-to-any-file: "scripts/**/*"
+area/talos:
+  - changed-files:
+      - any-glob-to-any-file: "talos/**/*"
 area/taskfile:
   - changed-files:
       - any-glob-to-any-file:
           - ".taskfiles/**/*"
           - "Taskfile.yaml"
-# Clusters
-cluster/main:
-  - changed-files:
-      - any-glob-to-any-file: "kubernetes/main/**/*"
