--- a/kubernetes/apps/default/plex/kometa/config/config.yml
+++ b/kubernetes/apps/default/plex/kometa/config/config.yml
@@ -25,19 +25,18 @@ libraries:
           style: half
           horizontal_position: right
           vertical_position: bottom
-      - repo: Movies - Overlays - Charts.yml
-      - repo: Movies - Overlays - Oscars.yml
-      - repo: Movies - Overlays - Ratings.yml
-      - repo: Movies - Overlays - Stand-up.yml
-      - repo: Movies - Overlays - Streaming Services.yml
-      - repo: Movies - Overlays - Studios.yml
+      - default: ratings
+        template_variables:
+          rating1: user
+          rating1_image: imdb
+          horizontal_position: left
+          vertical_position: bottom
     operations:
       mass_genre_update: imdb
       mass_content_rating_update: omdb
       mass_audience_rating_update: mdb_tomatoesaudience
       mass_critic_rating_update: mdb_metacritic
       mass_user_rating_update: imdb
-
 
   TV Shows:
     run_order:
