--- a/.github/workflows/image-pull.yaml
+++ b/.github/workflows/image-pull.yaml
@@ -92,7 +92,7 @@ jobs:
   pull:
     if: ${{ needs.pre-job.outputs.any_changed == 'true' && needs.compare.outputs.images != '[]' }}
     name: Image Pull - Pull Images
-    runs-on: home-ops-runner
+    runs-on: gha-runner-scale-set
     needs: ["pre-job", "compare"]
     strategy:
       matrix:
