--- a/kubernetes/apps/actions-runner-system/actions-runner-controller/runners/home-ops/externalsecret.yaml
+++ b/kubernetes/apps/actions-runner-system/actions-runner-controller/runners/home-ops/externalsecret.yaml
@@ -2,18 +2,18 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: actions-runner-controller-auth-secret
+  name: home-ops-runner-secret
 spec:
   target:
     deletionPolicy: Delete
     template:
       type: Opaque
       data:
-        ACTION_RUNNER_CONTROLLER_GITHUB_APP_ID: |-
+        github_app_id: |-
           {{ .ACTION_RUNNER_CONTROLLER_GITHUB_APP_ID }}
-        ACTION_RUNNER_CONTROLLER_GITHUB_INSTALLATION_ID: |-
+        github_app_installation_id: |-
           {{ .ACTION_RUNNER_CONTROLLER_GITHUB_INSTALLATION_ID }}
-        ACTION_RUNNER_CONTROLLER_GITHUB_PRIVATE_KEY: |-
+        github_app_private_key: |-
           {{ .ACTION_RUNNER_CONTROLLER_GITHUB_PRIVATE_KEY }}
   data:
     - secretKey: ACTION_RUNNER_CONTROLLER_GITHUB_APP_ID
