--- a/kubernetes/apps/actions-runner-system/actions-runner-controller/runners/kustomization.yaml
+++ b/kubernetes/apps/actions-runner-system/actions-runner-controller/runners/kustomization.yaml
@@ -2,8 +2,5 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: actions-runner-system
-components:
-  - ../../flux/components/common
 resources:
-  - ./gha-runner-controller/ks.yaml
+  - ./home-ops
