--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -3,13 +3,7 @@
   "extends": [
     "config:recommended",
     "docker:enableMajor",
-    "replacements:k8s-registry-move",
-    ":automergeBranch",
-    ":disableRateLimiting",
-    ":dependencyDashboard",
-    ":semanticCommits",
-    ":skipStatusChecks",
-    ":timezone(Europe/Berlin)",
+    "helpers:pinGitHubActionDigests",
     "github>elcattivo66/home-ops//.github/renovate/autoMerge.json5",
     "github>elcattivo66/home-ops//.github/renovate/clusters.json5",
     "github>elcattivo66/home-ops//.github/renovate/commitMessage.json5",
@@ -19,6 +13,11 @@
     "github>elcattivo66/home-ops//.github/renovate/labels.json5",
     "github>elcattivo66/home-ops//.github/renovate/packageRules.json5",
     "github>elcattivo66/home-ops//.github/renovate/semanticCommits.json5",
+    ":automergeBranch",
+    ":disableRateLimiting",
+    ":dependencyDashboard",
+    ":semanticCommits",
+    ":timezone(Europe/Berlin)",
   ],
   "dependencyDashboardTitle": "Renovate Dashboard 🤖",
   "suppressNotifications": ["prEditedNotification", "prIgnoreNotification"],
