--- a/kubernetes/apps/networking/multus/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/multus/app/helmrelease.yaml
@@ -25,43 +25,45 @@ spec:
     controllers:
       multus:
         type: daemonset
-        annotations:
-          reloader.stakater.com/auto: "true"
+
+        pod:
+          hostNetwork: true
+
+        initContainers:
+          cni-plugins:
+            image:
+              repository: ghcr.io/buroa/cni-plugins
+              tag: 1.6.2
+
         containers:
           multus:
             image:
               repository: ghcr.io/k8snetworkplumbingwg/multus-cni
-              tag: v4.1.4@sha256:09fdfb7ce090ccbf8927d2728970c3cdeb5917d48209f692de849e384f00d893
+              tag: v4.1.4
             command:
               - /thin_entrypoint
             args:
-              - --cni-bin-dir=/opt/cni/bin
-              - --cni-conf-dir=/etc/cni/net.d
               - --cleanup-config-on-exit=true
-              - --multus-conf-file=/config/00-multus.conf
             resources:
               requests:
-                cpu: 10m
+                cpu: "10m"
               limits:
-                memory: 512Mi
+                memory: "512Mi"
             securityContext:
               privileged: true
-    defaultPodOptions:
-      hostNetwork: true
+
     persistence:
-      config:
-        type: configMap
-        name: multus-configmap
-        globalMounts:
-          - path: /config/00-multus.conf
-            subPath: 00-multus.conf
-            readOnly: true
       etc-cni-net-d:
         type: hostPath
         hostPath: /etc/cni/net.d
+        globalMounts:
+          - path: /host/etc/cni/net.d
       opt-cni-bin:
         type: hostPath
         hostPath: /opt/cni/bin
+        globalMounts:
+          - path: /host/opt/cni/bin
+
     serviceAccount:
       create: true
       name: *app
