--- a/kubernetes/apps/networking/multus/app/kustomization.yaml
+++ b/kubernetes/apps/networking/multus/app/kustomization.yaml
@@ -1,4 +1,5 @@
 ---
+# yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
@@ -6,9 +7,3 @@ resources:
   - https://raw.githubusercontent.com/k8snetworkplumbingwg/network-attachment-definition-client/refs/tags/v1.7.5/artifacts/networks-crd.yaml
   - ./helmrelease.yaml
   - ./rbac.yaml
-configMapGenerator:
-  - name: multus-configmap
-    files:
-      - ./config/00-multus.conf
-generatorOptions:
-  disableNameSuffixHash: true
