--- a/kubernetes/apps/networking/multus/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/multus/app/helmrelease.yaml
@@ -32,8 +32,8 @@ spec:
         initContainers:
           cni-plugins:
             image:
-              repository: ghcr.io/buroa/cni-plugins
-              tag: 1.6.2
+              repository: ghcr.io/home-operations/cni-plugins
+              tag: 1.6.2@sha256:cc5aca198391ecda438c4fe435fa648fb513dee92144a99a69bde344b1dffcdc
 
         containers:
           multus:
