--- a/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
@@ -50,7 +50,7 @@ spec:
                   name: home-assistant-secret
             image:
               repository: ghcr.io/home-operations/postgres-init
-              tag: "16.8"
+              tag: 17
         containers:
           app:
             image:
