--- a/kubernetes/apps/default/tandoor/app/helmrelease.yaml
+++ b/kubernetes/apps/default/tandoor/app/helmrelease.yaml
@@ -42,7 +42,7 @@ spec:
                   name: tandoor-secret
             image:
               repository: ghcr.io/home-operations/postgres-init
-              tag: "16.8"
+              tag: 17
 
         containers:
           app:
