--- a/kubernetes/apps/default/lldap/app/helmrelease.yaml
+++ b/kubernetes/apps/default/lldap/app/helmrelease.yaml
@@ -36,7 +36,7 @@ spec:
                   name: lldap-secret
             image:
               repository: ghcr.io/home-operations/postgres-init
-              tag: "16.8"
+              tag: 17
         containers:
           app:
             image:
