--- a/kubernetes/apps/default/paperless/app/helmrelease.yaml
+++ b/kubernetes/apps/default/paperless/app/helmrelease.yaml
@@ -34,7 +34,7 @@ spec:
                   name: paperless-secret
             image:
               repository: ghcr.io/home-operations/postgres-init
-              tag: "16.8"
+              tag: 17
         containers:
           app:
             image:
