--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -41,6 +41,9 @@ spec:
     toolbox:
       enabled: true
     cephClusterSpec:
+      configOverrice: |
+        [mon]
+        mon_data_avail_warn = 15
       cephConfig:
         global:
           bdev_enable_discard: "true" # quote
@@ -48,8 +51,6 @@ spec:
           device_failure_prediction_mode: local # requires mgr module
         mgr:
           mgr/crash/warn_recent_interval: "7200" # 2h
-        mon:
-          monDataAvailWarn: "15"  # 15% free space threshold
       crashCollector:
         disable: false
       dashboard:
