--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -41,14 +41,12 @@ spec:
     toolbox:
       enabled: true
     cephClusterSpec:
-      configOverrice: |
-        [mon]
-        mon_data_avail_warn = 15
       cephConfig:
         global:
           bdev_enable_discard: "true" # quote
           osd_class_update_on_start: "false" # quote
           device_failure_prediction_mode: local # requires mgr module
+          mon_data_avail_warn: 15
         mgr:
           mgr/crash/warn_recent_interval: "7200" # 2h
       crashCollector:
