--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -46,7 +46,7 @@ spec:
           bdev_enable_discard: "true" # quote
           osd_class_update_on_start: "false" # quote
           device_failure_prediction_mode: local # requires mgr module
-          mon_data_avail_warn: 15
+          mon_data_avail_warn: "15"
         mgr:
           mgr/crash/warn_recent_interval: "7200" # 2h
       crashCollector:
