--- a/kubernetes/apps/default/adventurelog/app/externalsecret.yaml
+++ b/kubernetes/apps/default/adventurelog/app/externalsecret.yaml
@@ -12,7 +12,8 @@ spec:
         # App
         DJANGO_ADMIN_PASSWORD: "{{ .DJANGO_ADMIN_PASSWORD }}"
         SECRET_KEY: "{{ .SECRET_KEY }}"
-        PGHOST: &dbhost postgres16-rw.databases.svc.cluster.local:5432
+        PGHOST: &dbhost postgres16-rw.databases.svc.cluster.local
+        PGPORT: 5432
         PGDATABASE: &dbname "adventurelog"
         PGUSER: &dbuser "{{ .ADVENTURELOG_POSTGRES_USER }}"
         PGPASSWORD: &dbpass "{{ .ADVENTURELOG_POSTGRES_PASS }}"
