deploy separate db

--- a/kubernetes/apps/default/adventurelog/app/externalsecret.yaml
+++ b/kubernetes/apps/default/adventurelog/app/externalsecret.yaml
@@ -12,16 +12,10 @@ spec:
         # App
         DJANGO_ADMIN_PASSWORD: "{{ .DJANGO_ADMIN_PASSWORD }}"
         SECRET_KEY: "{{ .SECRET_KEY }}"
-        PGHOST: &dbhost postgres16-rw.databases.svc.cluster.local
+        PGHOST: &dbhost adventurelog-db.default.svc.cluster.local
         PGDATABASE: &dbname "adventurelog"
         PGUSER: &dbuser "{{ .ADVENTURELOG_POSTGRES_USER }}"
         PGPASSWORD: &dbpass "{{ .ADVENTURELOG_POSTGRES_PASS }}"
-        # Postgres Init
-        INIT_POSTGRES_DBNAME: *dbname
-        INIT_POSTGRES_HOST: *dbhost
-        INIT_POSTGRES_USER: *dbuser
-        INIT_POSTGRES_PASS: *dbpass
-        INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
   data:
     - secretKey: DJANGO_ADMIN_PASSWORD
       sourceRef:
@@ -55,11 +49,3 @@ spec:
       remoteRef:
         key: de49178f-239e-4590-b281-e11fcb718dd9
         property: pg_password
-    - secretKey: POSTGRES_SUPER_PASS
-      sourceRef:
-        storeRef:
-          name: bitwarden-login
-          kind: ClusterSecretStore
-      remoteRef:
-        key: 2ad3fcad-e666-4701-b44c-a4e6e5cc5da3
-        property: password
