--- a/kubernetes/apps/default/adventurelog/app/db.yaml
+++ b/kubernetes/apps/default/adventurelog/app/db.yaml
@@ -48,7 +48,7 @@ spec:
                     key: PGPASSWORD
               - name: POSTGRES_DB
                 valueFrom:
-                  configMapKeyRef:
+                  secretKeyRef:
                     name: adventurelog-secret
                     key: PGDATABASE
         statefulset:
