--- a/kubernetes/apps/default/adventurelog/app/helmrelease.yaml
+++ b/kubernetes/apps/default/adventurelog/app/helmrelease.yaml
@@ -73,21 +73,23 @@ spec:
             port: &server-port 8000
 
     ingress:
-      app:
+      frontend:
         className: internal
         hosts:
           - host: &host adventurelog.${SECRET_DOMAIN}
             paths:
               - path: /
+                pathType: Prefix
                 service:
                   identifier: app
                   port: *frontend-port
-      code-server:
+      server:
         className: internal
         hosts:
           - host: adventurelog-backend.${SECRET_DOMAIN}
             paths:
               - path: /
+                pathType: Prefix
                 service:
                   identifier: app
                   port: *server-port
