--- a/kubernetes/apps/default/adventurelog/app/helmrelease.yaml
+++ b/kubernetes/apps/default/adventurelog/app/helmrelease.yaml
@@ -24,11 +24,11 @@ spec:
       retries: 3
   values:
     controllers:
-      adventurelog:
+      frontend:
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
-          frontend:
+          app:
             image:
               repository: ghcr.io/seanmorley15/adventurelog-frontend
               tag: v0.9.0@sha256:dada2faca11647c70d3d4fb06db6dbc54b069c7312597527625564f3bd6af6df
@@ -45,7 +45,11 @@ spec:
               limits:
                 memory: 256Mi
 
-          server:
+      backend:
+        annotations:
+          reloader.stakater.com/auto: "true"
+        containers:
+          app:
             image:
               repository: ghcr.io/seanmorley15/adventurelog-backend
               tag: v0.9.0@sha256:4109ee4e35e8be4965ecd4315cd3c1d43757426ba23d03f7fba2b1b25d973202
@@ -64,55 +68,55 @@ spec:
                 memory: 512Mi
 
     service:
-      app:
-        controller: *app
+      frontend:
+        controller: frontend
         ports:
           http:
-            port: &frontend-port 3000
-          base:
-            port: &server-port 8000
+            port: 3000
+      backend:
+        controller: backend
+        ports:
+          http:
+            port: 8000
 
     ingress:
-      frontend:
+      main:
         className: internal
+        annotations:
+          nginx.ingress.kubernetes.io/configuration-snippet: |
+            rewrite /media/(.*) /$1 break;
+            rewrite /admin/(.*) /$1 break;
+            rewrite /apstatici/(.*) /$1 break;
+            rewrite /accounts/(.*) /$1 break;
         hosts:
           - host: &host adventurelog.${SECRET_DOMAIN}
             paths:
               - path: /
                 pathType: Prefix
                 service:
-                  identifier: app
-                  port: *frontend-port
+                  identifier: frontend
+                  port: http
               - path: /media
                 pathType: Prefix
                 service:
-                  identifier: app
-                  port: *server-port
+                  identifier: frontend
+                  port: http
               - path: /admin
                 pathType: Prefix
                 service:
-                  identifier: app
-                  port: *server-port
+                  identifier: backend
+                  port: http
               - path: /static
                 pathType: Prefix
                 service:
-                  identifier: app
-                  port: *server-port
+                  identifier: backend
+                  port: http
               - path: /accounts
                 pathType: Prefix
                 service:
-                  identifier: app
-                  port: *server-port
-      server:
-        className: internal
-        hosts:
-          - host: adventurelog-backend.${SECRET_DOMAIN}
-            paths:
-              - path: /
-                pathType: Prefix
-                service:
-                  identifier: app
-                  port: *server-port
+                  identifier: backend
+                  port: http
+
     persistence:
       config:
         enabled: true
