--- a/kubernetes/apps/default/adventurelog/app/helmrelease.yaml
+++ b/kubernetes/apps/default/adventurelog/app/helmrelease.yaml
@@ -36,7 +36,7 @@ spec:
               - secretRef:
                   name: adventurelog-secret
             env:
-              PUBLIC_SERVER_URL: "http://adventurelog:8000"
+              PUBLIC_SERVER_URL: "http://adventurelog-backend.default.svc.cluster.local:8000"
               BODY_SIZE_LIMIT: "200000"
             resources:
               requests:
