--- a/kubernetes/apps/default/smtp-relay/app/config/maddy.conf
+++ b/kubernetes/apps/default/smtp-relay/app/config/maddy.conf
@@ -17,8 +17,7 @@ target.queue remote_queue {
 }
 
 target.smtp remote_smtp {
-    attempt_starttls yes
-    require_tls yes
+    starttls yes
     auth plain {env:SMTP_USERNAME} {env:SMTP_PASSWORD}
     targets tls://{env:SMTP_SERVER}:{env:SMTP_PORT}
 }
