--- a/kubernetes/apps/default/smtp-relay/app/config/maddy.conf
+++ b/kubernetes/apps/default/smtp-relay/app/config/maddy.conf
@@ -17,7 +17,7 @@ target.queue remote_queue {
 }
 
 target.smtp remote_smtp {
-    starttls yes
+    starttls no
     auth plain {env:SMTP_USERNAME} {env:SMTP_PASSWORD}
     targets tls://{env:SMTP_SERVER}:{env:SMTP_PORT}
 }
