Add oauth config for adventurelog

--- a/kubernetes/apps/default/authelia/app/externalsecret.yaml
+++ b/kubernetes/apps/default/authelia/app/externalsecret.yaml
@@ -30,6 +30,7 @@ spec:
         TANDOOR_OAUTH_CLIENT_SECRET: "{{ .TANDOOR_OAUTH_CLIENT_SECRET }}"
         PAPERLESS_OAUTH_CLIENT_SECRET: "{{ .PAPERLESS_OAUTH_CLIENT_SECRET }}"
         KYOO_OAUTH_CLIENT_SECRET: "{{ .KYOO_OAUTH_CLIENT_SECRET }}"
+        ADVENTURELOG_OAUTH_CLIENT_SECRET: "{{ .ADVENTURELOG_OAUTH_CLIENT_SECRET }}"
         # DB
         INIT_POSTGRES_DBNAME: *dbName
         INIT_POSTGRES_HOST: *dbHost
@@ -181,4 +182,12 @@ spec:
           kind: ClusterSecretStore
       remoteRef:
         key: 8b972093-ea0b-4af3-81d0-43b0bb9283f8
+        property: oauth_client_secret
+    - secretKey: ADVENTURELOG_OAUTH_CLIENT_SECRET
+      sourceRef:
+        storeRef:
+          name: bitwarden-fields
+          kind: ClusterSecretStore
+      remoteRef:
+        key: de49178f-239e-4590-b281-e11fcb718dd9
         property: oauth_client_secret
