--- a/kubernetes/apps/default/authelia/app/config/configuration.yaml
+++ b/kubernetes/apps/default/authelia/app/config/configuration.yaml
@@ -175,3 +175,15 @@ identity_providers:
             "https://kyoo.${SECRET_DOMAIN}/api/auth/logged/authelia",
           ]
         userinfo_signed_response_alg: none
+      - client_name: Adventurelog
+        client_id: adventurelog
+        client_secret: "$${ADVENTURELOG_OAUTH_CLIENT_SECRET}"
+        public: false
+        authorization_policy: two_factor
+        pre_configured_consent_duration: 1y
+        scopes: ["openid", "profile", "groups", "email"]
+        redirect_uris:
+          [
+            "https://adventurelog.${SECRET_DOMAIN}/accounts/oidc/authelia/login/callback/",
+          ]
+        userinfo_signed_response_alg: none
