--- a/kubernetes/apps/default/adventurelog/app/helmrelease.yaml
+++ b/kubernetes/apps/default/adventurelog/app/helmrelease.yaml
@@ -37,6 +37,7 @@ spec:
                   name: adventurelog-secret
             env:
               PUBLIC_SERVER_URL: "http://adventurelog-backend.default.svc.cluster.local:8000"
+              ORIGIN: https://adventurelog.${SECRET_DOMAIN}
               BODY_SIZE_LIMIT: Infinity
             resources:
               requests:
@@ -55,9 +56,9 @@ spec:
               tag: v0.9.0@sha256:4109ee4e35e8be4965ecd4315cd3c1d43757426ba23d03f7fba2b1b25d973202
             envFrom: *envFrom
             env:
-              PUBLIC_URL: https://adventurelog.${SECRET_DOMAIN}
+              PUBLIC_URL: https://adventurelog-backend.${SECRET_DOMAIN}
               FRONTEND_URL: https://adventurelog.${SECRET_DOMAIN}
-              CSRF_TRUSTED_ORIGINS: https://adventurelog.${SECRET_DOMAIN}
+              CSRF_TRUSTED_ORIGINS: https://adventurelog-backend.${SECRET_DOMAIN},https://adventurelog.${SECRET_DOMAIN}
               DEBUG: True
               DJANGO_ADMIN_USERNAME: admin
               EMAIL_BACKEND: email
@@ -87,12 +88,6 @@ spec:
     ingress:
       frontend:
         className: internal
-        annotations:
-          nginx.ingress.kubernetes.io/configuration-snippet: |
-            rewrite /media/(.*) /$1 ;
-            rewrite /admin/(.*) /$1 ;
-            rewrite /static/(.*) /$1 ;
-            rewrite /accounts/(.*) /$1 break;
         hosts:
           - host: adventurelog.${SECRET_DOMAIN}
             paths:
@@ -101,36 +96,16 @@ spec:
                 service:
                   identifier: frontend
                   port: http
-              - path: /media
+      backend:
+        className: internal
+        hosts:
+          - host: adventurelog-backend.${SECRET_DOMAIN}
+            paths:
+              - path: /
                 pathType: Prefix
                 service:
                   identifier: backend
                   port: http
-              - path: /admin
-                pathType: Prefix
-                service:
-                  identifier: backend
-                  port: http
-              - path: /static
-                pathType: Prefix
-                service:
-                  identifier: backend
-                  port: http
-              - path: /accounts
-                pathType: Prefix
-                service:
-                  identifier: backend
-                  port: http
-      # backend:
-      #   className: internal
-      #   hosts:
-      #     - host: adventurelog-backend.${SECRET_DOMAIN}
-      #       paths:
-      #         - path: /
-      #           pathType: Prefix
-      #           service:
-      #             identifier: backend
-      #             port: http
 
     persistence:
       config:
