--- a/kubernetes/apps/default/adventurelog/app/helmrelease.yaml
+++ b/kubernetes/apps/default/adventurelog/app/helmrelease.yaml
@@ -56,7 +56,7 @@ spec:
               tag: beta@sha256:d909c41817d5a99f414dbfeb7ffcfd098f4e01c9325c25adf0ce917b2049ced5
             envFrom: *envFrom
             env:
-              PUBLIC_URL: https://adventurelog-backend.${SECRET_DOMAIN}
+              PUBLIC_URL: https://adventurelog-backend.${SECRET_DOMAIN}:443
               FRONTEND_URL: https://adventurelog.${SECRET_DOMAIN}
               CSRF_TRUSTED_ORIGINS: https://adventurelog-backend.${SECRET_DOMAIN},https://adventurelog.${SECRET_DOMAIN}
               DEBUG: True
@@ -83,6 +83,8 @@ spec:
         controller: backend
         ports:
           http:
+            port: 80
+          base:
             port: 8000
 
     ingress:
