Mount pvc to backend

--- a/kubernetes/apps/default/adventurelog/app/helmrelease.yaml
+++ b/kubernetes/apps/default/adventurelog/app/helmrelease.yaml
@@ -113,5 +113,7 @@ spec:
       config:
         enabled: true
         existingClaim: *app
-        globalMounts:
-          - path: /code/media
+        advancedMounts:
+          backend:
+            app:
+              - path: /code/media
