--- a/kubernetes/apps/default/adventurelog/app/externalsecret.yaml
+++ b/kubernetes/apps/default/adventurelog/app/externalsecret.yaml
@@ -16,6 +16,9 @@ spec:
         PGDATABASE: &dbname "adventurelog"
         PGUSER: &dbuser "{{ .ADVENTURELOG_POSTGRES_USER }}"
         PGPASSWORD: &dbpass "{{ .ADVENTURELOG_POSTGRES_PASS }}"
+        POSTGRES_USER: *dbuser
+        POSTGRES_PASSWORD: *dbpass
+        POSTGRES_DB: *dbname
   data:
     - secretKey: DJANGO_ADMIN_PASSWORD
       sourceRef:
