--- a/kubernetes/apps/default/adventurelog/app/helmrelease.yaml
+++ b/kubernetes/apps/default/adventurelog/app/helmrelease.yaml
@@ -73,6 +73,29 @@ spec:
               limits:
                 memory: 512Mi
 
+      database:
+        containers:
+          app:
+            image:
+              repository: registry.hub.docker.com/postgis/postgis
+              tag: 17-master@sha256:c2472b0574cf403884a924870a099641bf07507961a9f8941a89b766b1ab976f
+            envFrom: *envFrom
+            resources:
+              requests:
+                cpu: 10m
+                memory: 250Mi
+              limits:
+                memory: 512Mi
+        type: statefulset
+        statefulset:
+          podManagementPolicy: Parallel
+          volumeClaimTemplates:
+          - accessMode: ReadWriteOnce
+            globalMounts:
+            - path: /var/lib/postgresql
+            name: adventurelog-db
+            size: 5Gi
+
     service:
       frontend:
         controller: frontend
@@ -86,6 +109,11 @@ spec:
             port: 80
           base:
             port: 8000
+      database:
+        controller: database
+        ports:
+          http:
+            port: 5432
 
     ingress:
       frontend:
