fix database url

--- a/kubernetes/apps/default/adventurelog/app/externalsecret.yaml
+++ b/kubernetes/apps/default/adventurelog/app/externalsecret.yaml
@@ -12,7 +12,7 @@ spec:
         # App
         DJANGO_ADMIN_PASSWORD: "{{ .DJANGO_ADMIN_PASSWORD }}"
         SECRET_KEY: "{{ .SECRET_KEY }}"
-        PGHOST: &dbhost adventurelog-db.default.svc.cluster.local
+        PGHOST: &dbhost adventurelog-database.default.svc.cluster.local
         PGDATABASE: &dbname "adventurelog"
         PGUSER: &dbuser "{{ .ADVENTURELOG_POSTGRES_USER }}"
         PGPASSWORD: &dbpass "{{ .ADVENTURELOG_POSTGRES_PASS }}"
