--- a/kubernetes/apps/default/adventurelog/app/externalsecret.yaml
+++ b/kubernetes/apps/default/adventurelog/app/externalsecret.yaml
@@ -11,6 +11,7 @@ spec:
       data:
         # App
         DJANGO_ADMIN_PASSWORD: "{{ .DJANGO_ADMIN_PASSWORD }}"
+        DJANGO_ADMIN_EMAIL: "{{ .DJANGO_ADMIN_EMAIL }}"
         SECRET_KEY: "{{ .SECRET_KEY }}"
         PGHOST: &dbhost adventurelog-db.default.svc.cluster.local
         PGDATABASE: &dbname "adventurelog"
@@ -28,6 +29,14 @@ spec:
       remoteRef:
         key: de49178f-239e-4590-b281-e11fcb718dd9
         property: django_admin_password
+    - secretKey: DJANGO_ADMIN_EMAIL
+      sourceRef:
+        storeRef:
+          name: bitwarden-fields
+          kind: ClusterSecretStore
+      remoteRef:
+        key: de49178f-239e-4590-b281-e11fcb718dd9
+        property: django_admin_email
     - secretKey: SECRET_KEY
       sourceRef:
         storeRef:
