--- a/kubernetes/apps/default/adventurelog/app/externalsecret.yaml
+++ b/kubernetes/apps/default/adventurelog/app/externalsecret.yaml
@@ -13,7 +13,7 @@ spec:
         DJANGO_ADMIN_PASSWORD: "{{ .DJANGO_ADMIN_PASSWORD }}"
         DJANGO_ADMIN_EMAIL: "{{ .DJANGO_ADMIN_EMAIL }}"
         SECRET_KEY: "{{ .SECRET_KEY }}"
-        PGHOST: &dbhost adventurelog-db.default.svc.cluster.local
+        PGHOST: &dbhost postgis-rw.databases.svc.cluster.local
         PGDATABASE: &dbname "adventurelog"
         PGUSER: &dbuser "{{ .ADVENTURELOG_POSTGRES_USER }}"
         PGPASSWORD: &dbpass "{{ .ADVENTURELOG_POSTGRES_PASS }}"
