--- a/kubernetes/apps/default/adventurelog/app/externalsecret.yaml
+++ b/kubernetes/apps/default/adventurelog/app/externalsecret.yaml
@@ -17,9 +17,11 @@ spec:
         PGDATABASE: &dbname "adventurelog"
         PGUSER: &dbuser "{{ .ADVENTURELOG_POSTGRES_USER }}"
         PGPASSWORD: &dbpass "{{ .ADVENTURELOG_POSTGRES_PASS }}"
-        POSTGRES_USER: *dbuser
-        POSTGRES_PASSWORD: *dbpass
-        POSTGRES_DB: *dbname
+        INIT_POSTGRES_DBNAME: *dbname
+        INIT_POSTGRES_HOST: *dbhost
+        INIT_POSTGRES_USER: *dbuser
+        INIT_POSTGRES_PASS: *dbpass
+        INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
   data:
     - secretKey: DJANGO_ADMIN_PASSWORD
       sourceRef:
@@ -61,3 +63,11 @@ spec:
       remoteRef:
         key: de49178f-239e-4590-b281-e11fcb718dd9
         property: pg_password
+    - secretKey: POSTGRES_SUPER_PASS
+      sourceRef:
+        storeRef:
+          name: bitwarden-login
+          kind: ClusterSecretStore
+      remoteRef:
+        key: 2ad3fcad-e666-4701-b44c-a4e6e5cc5da3
+        property: password
