--- a/kubernetes/apps/databases/cloudnative-pg/cluster/scheduled-backup.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/cluster/scheduled-backup.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: postgresql.cnpg.io/v1
 kind: ScheduledBackup
 metadata:
@@ -9,3 +10,15 @@ spec:
   backupOwnerReference: self
   cluster:
     name: postgres16
+---
+apiVersion: postgresql.cnpg.io/v1
+kind: ScheduledBackup
+metadata:
+  name: postgis
+  namespace: databases
+spec:
+  schedule: "@daily"
+  immediate: true
+  backupOwnerReference: self
+  cluster:
+    name: postgis
