--- a/kubernetes/apps/default/adventurelog/app/externalsecret.yaml
+++ b/kubernetes/apps/default/adventurelog/app/externalsecret.yaml
@@ -15,8 +15,8 @@ spec:
         SECRET_KEY: "{{ .SECRET_KEY }}"
         PGHOST: &dbhost postgis-rw.databases.svc.cluster.local
         PGDATABASE: &dbname "adventurelog"
-        PGUSER: &dbuser "{{ .ADVENTURELOG_POSTGRES_USER }}"
-        PGPASSWORD: &dbpass "{{ .ADVENTURELOG_POSTGRES_PASS }}"
+        PGUSER: &dbuser "{{ .POSTGRES_SUPER_USER }}"
+        PGPASSWORD: &dbpass "{{ .POSTGRES_SUPER_PASS }}"
         INIT_POSTGRES_DBNAME: *dbname
         INIT_POSTGRES_HOST: *dbhost
         INIT_POSTGRES_USER: *dbuser
@@ -71,3 +71,11 @@ spec:
       remoteRef:
         key: 2ad3fcad-e666-4701-b44c-a4e6e5cc5da3
         property: password
+    - secretKey: POSTGRES_SUPER_USER
+      sourceRef:
+        storeRef:
+          name: bitwarden-login
+          kind: ClusterSecretStore
+      remoteRef:
+        key: 2ad3fcad-e666-4701-b44c-a4e6e5cc5da3
+        property: username
