--- a/kubernetes/apps/databases/cloudnative-pg/cluster/cluster-postgis.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/cluster/cluster-postgis.yaml
@@ -18,6 +18,9 @@ spec:
     initdb:
       postInitTemplateSQL:
         - CREATE EXTENSION postgis;
+        - CREATE EXTENSION postgis_topology;
+        - CREATE EXTENSION fuzzystrmatch;
+        - CREATE EXTENSION postgis_tiger_geocoder;
   # Note: Bootstrap is needed when recovering from an existing cnpg cluster
   postgresql:
     parameters:
