--- a/kubernetes/apps/default/ollama/ks.yaml
+++ b/kubernetes/apps/default/ollama/ks.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &appname ollma
+  name: &appname ollama
   namespace: &namespace default
 spec:
   targetNamespace: *namespace
@@ -16,7 +16,7 @@ spec:
       namespace: rook-ceph
     - name: volsync
       namespace: volsync-system
-  path: ./kubernetes/apps/default/ollma/app
+  path: ./kubernetes/apps/default/ollama/app
   prune: true
   sourceRef:
     kind: GitRepository
