--- a/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
@@ -173,12 +173,8 @@ spec:
           # renovate: depName="Node Exporter Full"
           gnetId: 1860
           revision: 40
-          datasource: Prometheus
-        # zfs:
-          # renovate: depName="ZFS"
-          # gnetId: 7845
-          # revision: 4
-          # datasource: Prometheus
+          datasource:
+            - { name: DS_PROMETHEUS, value: Prometheus }
         cert-manager:
           # renovate: depName="Cert-manager-Kubernetes"
           gnetId: 20842
