--- a/kubernetes/talos/talconfig.yaml
+++ b/kubernetes/talos/talconfig.yaml
@@ -145,6 +145,7 @@ controlPlane:
   schematic:
     customization:
       extraKernelArgs:
+        - -selinux
         - apparmor=0           # Less security, more speed
         - init_on_alloc=0      # Less security, more speed
         - init_on_free=0       # Less security, more speed
