--- a/kubernetes/apps/default/ollama/app/helmrelease.yaml
+++ b/kubernetes/apps/default/ollama/app/helmrelease.yaml
@@ -33,11 +33,11 @@ spec:
           reloader.stakater.com/auto: "true"
         containers:
           app:
-            command: ["/bin/sh"]
-            args: ["-c", "sleep infinity"]
+            # command: ["/bin/sh"]
+            # args: ["-c", "sleep infinity"]
             image:
               repository: ghcr.io/tyzbit/ollama-intel-gpu
-              tag: latest
+              tag: ipex-llm-v.0.0.1-2
             securityContext:
               privileged: true
               supplementalGroups: [44]
