--- a/kubernetes/apps/default/authelia/app/config/configuration.yaml
+++ b/kubernetes/apps/default/authelia/app/config/configuration.yaml
@@ -115,8 +115,9 @@ identity_providers:
         pre_configured_consent_duration: 1y
         scopes: ["openid", "profile", "email"]
         redirect_uris:
-          ["https://immich.${SECRET_DOMAIN}/auth/login", "app.immich:///oauth-callback"]
+          ["https://immich.${SECRET_DOMAIN}/auth/login", "https://immich.${SECRET_DOMAIN}/user-settings",  "app.immich:///oauth-callback"]
         userinfo_signed_response_alg: none
+        token_endpoint_auth_method: 'client_secret_post'
       - client_name: Minio
         client_id: minio
         client_secret: "$${MINIO_OAUTH_CLIENT_SECRET}"
