--- a/kubernetes/apps/default/immich/app/helmrelease.yaml
+++ b/kubernetes/apps/default/immich/app/helmrelease.yaml
@@ -88,9 +88,9 @@ spec:
             resources:
               requests:
                 cpu: 5m
-                memory: 1889Mi
+                memory: 2Gi
               limits:
-                memory: 4096Mi
+                memory: 5Gi
 
     defaultPodOptions:
       securityContext:
