--- a/kubernetes/apps/system-upgrade/system-upgrade-controller/app/helmrelease.yaml
+++ b/kubernetes/apps/system-upgrade/system-upgrade-controller/app/helmrelease.yaml
@@ -25,7 +25,7 @@ spec:
       retries: 3
   values:
     controllers:
-      system-upgrade:
+      system-upgrade-controller:
         strategy: RollingUpdate
         replicas: 2
         containers:
@@ -50,22 +50,15 @@ spec:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
               capabilities: { drop: ["ALL"] }
+
+        serviceAccount:
+          identifier: system-upgrade-controller
+
+    serviceAccount:
+      system-upgrade-controller: {}
+
     defaultPodOptions:
-      affinity:
-        nodeAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            nodeSelectorTerms:
-              - matchExpressions:
-                  - key: node-role.kubernetes.io/control-plane
-                    operator: Exists
       securityContext:
         runAsNonRoot: true
         runAsUser: 1000
         runAsGroup: 1000
-      tolerations:
-        - key: node-role.kubernetes.io/control-plane
-          operator: Exists
-          effect: NoSchedule
-    serviceAccount:
-      name: *app
-      create: true
