--- a/kubernetes/apps/networking/multus/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/multus/app/helmrelease.yaml
@@ -51,6 +51,8 @@ spec:
                 memory: "512Mi"
             securityContext:
               privileged: true
+        serviceAccount:
+          identifier: multus
 
     persistence:
       etc-cni-net-d:
@@ -65,5 +67,4 @@ spec:
           - path: /host/opt/cni/bin
 
     serviceAccount:
-      create: true
-      name: *app
+      multus: {}
