--- a/kubernetes/apps/databases/vernemq/app/externalsecret.yaml
+++ b/kubernetes/apps/databases/vernemq/app/externalsecret.yaml
@@ -11,7 +11,7 @@ spec:
       type: Opaque
       data:
         DOCKER_VERNEMQ_USER_ADMIN: "{{ .vernemq_password }}"
-        DOCKER_VERNEMQ_USER_MQTT: "{{ .vernemq_user_mqtt_password }}"
+        DOCKER_VERNEMQ_USER_openhab: "{{ .vernemq_user_openhab_password }}"
   data:
     - secretKey: vernemq_password
       sourceRef:
@@ -20,12 +20,12 @@ spec:
           kind: ClusterSecretStore
       remoteRef:
         key: db6013d0-f557-48f5-ab8a-1ca8c3ab3222
-        property: username
-    - secretKey: vernemq_user_mqtt_password
+        property: password
+    - secretKey: vernemq_user_openhab_password
       sourceRef:
         storeRef:
-          name: bitwarden-login
+          name: bitwarden-fields
           kind: ClusterSecretStore
       remoteRef:
         key: db6013d0-f557-48f5-ab8a-1ca8c3ab3222
-        property: password
+        property: mqtt_password
