--- a/kubernetes/apps/databases/cloudnative-pg/cluster/kustomization.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/cluster/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 namespace: databases
 resources:
   - https://github.com/cloudnative-pg/plugin-barman-cloud/releases/download/v0.4.0/manifest.yaml
+  - ./barmancloud-backup.yaml
   - ./cluster-postgis.yaml
   - ./cluster16.yaml
   - ./scheduled-backup.yaml
