--- a/kubernetes/apps/databases/cloudnative-pg/cluster/scheduled-backup.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/cluster/scheduled-backup.yaml
@@ -22,3 +22,6 @@ spec:
   backupOwnerReference: self
   cluster:
     name: postgis
+  method: plugin
+  pluginConfiguration:
+    name: barman-cloud.cloudnative-pg.io
